# tenax

./: .gitignore  CONTRIBUTING.md  LICENSE  Notes.md  README.md  firstversion.sh  main.py  pyproject.toml  setup.py  tnx.py
.github/workflows/: ci.yml
docs/: README.md  analyst-guide.md  apt-tradecraft-notes.md  architecture.md  attack-mapping.md  build-workflow.md  false-positives.md  methodology.md  output-schemas.md  triage-principles.md  usage-examples.md
docs/groups/: apt-tradecraft-notes.md
docs/modules/: at-jobs.md  autostart-hooks.md  capabilities.md  containers.md  cron.md  environment-hooks.md  ld-preload.md  network-hooks.md  pam.md  rc-init.md  shell-profiles.md  ssh.md  sudoers.md  systemd.md  tmp-paths.md
tenax/: analyzer.py  banner.py  cli.py  collector.py  collector_errors.py  collector_output.py  module_interface.py  output_paths.py  reporter.py  scope.py  utils.py
tenax/checks/: __init__.py  at_jobs.py  autostart_hooks.py  capabilities.py  common.py  containers.py  cron.py  environment_hooks.py  ld_preload.py  network_hooks.py  pam.py  rc_init.py  shell_profiles.py  sodoers.py  ssh.py  sudoers.py  systemd.py  tmp_paths.py
tests/: conftest.py  generate_benign_admin_corpus_1000.sh  generate_ubuntu_persistence_corpus_v2.sh  test_analyzer_contract.py  test_collector_contract.py  test_cron.py  test_internal_contracts.py  test_pam.py  test_remaining_modules.py  test_reporter.py  test_schema_shapes.py  test_shell_profiles.py  test_ssh.py  test_sudoers.py  test_systemd.py  test_systemd_false_positives.py  test_tmp_paths.py
(+24 files in other folders)
